...
    <string name="open_camera_view_button">Otwórz widok kamery</string>
    <string name="add_recipes_title">Dodaj przepis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_view_take_picture_button">Zrób zdjęcie</string>
    <string name="camera_photo_captured_info">Zrobiono zdjęcie</string>
    <string name="permission_not_granted">Nie przyznano uprawnień</string>
    <string name="missing_input_data">Nie wprowadzono wszystkich danych</string>
    <string name="save_recipe">Zapisz przepis</string>
    <string name="go_back">Powrót</string>
    <string name="search_button">Wyszukaj</string>
    <string name="search_recipe">Wyszukaj przepis</string>
    <string name="save_button">Zapisz</string>
    <string name="edit_text_name_field">Nazwa</string>
...
    <string name="account_delete_dialog_title">Czy chcesz usunąć konto?</string>
    <string name="account_delete_dialog_cancel">Anuluj</string>
    <string name="account_delete_dialog_confirm">Usuń</string>
    <string name="account_register_no_consent">Trzeba się zgodzić</string>
    <string name="account_register_password_too_short">Hasło musi posiadać minimum 8 znaków</string>
    <string name="account_register_password_not_match">Hasła nie są identyczne</string>
    <string name="account_register_email_not_valid">Email nie jest poprawny</string>
    <string name="account_register_thanks">Dziękujemy za rejestrację! Mail aktywacyjny został wysłany.</string>
    <string name="account_recovery_recoveryButton">Resetuj hasło</string>
    <string name="account_recovery_start">Wysłano maila z tokenem</string>
    <string name="title_register_recovery">Resetuj hasło</string>
    <string name="title_reset_account">Zmień hasło</string>
    <string name="account_reset_token">Token</string>
...
